--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   position: relative;
   text-align: center;
   color: white;
-  padding-bottom: 120px;
+  padding-bottom: 0px;
 }
 /* Centered text */
 .centered {
@@ -46,4 +46,26 @@ li {
 
 h2 {
   text-align: center;
+}
+
+#portfolio1 {
+
+}
+ ul {
+   text-align: center;
+ }
+ li {
+   display: inline-block;
+ }
+footer{
+  text-align: center;
+
+}
+textarea {
+  background: transparent;
+  color: white;
+  border: 2em white;
+  width: auto;
+  outline-color: white;
+
 }
