--- a/css/style.css
+++ b/css/style.css
@@ -48,9 +48,6 @@ h2 {
   text-align: center;
 }
 
-#portfolio1 {
-
-}
  ul {
    text-align: center;
  }
@@ -68,4 +65,45 @@ textarea {
   width: auto;
   outline-color: white;
 
+}
+/*hover effect*/
+.container {
+  position: relative;
+  width: 100%;
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.container:hover .image {
+  opacity: 0.3;
+}
+
+.container:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  background-color: #ED7F2E;
+  font-weight: bold;
+  color: none;
+  font-size: 16px;
+  padding: 16px 32px;
 }
