--- a/css/style.css
+++ b/css/style.css
@@ -80,14 +80,8 @@ footer{
   text-align: center;
 
 }
-textarea {
-  background: transparent;
-  color: white;
-  border: 2em white;
-  width: auto;
-  outline-color: white;
 
-}
+
 /*hover effect*/
 .container {
   position: relative;
@@ -128,4 +122,12 @@ textarea {
   color: none;
   font-size: 16px;
   padding: 16px 32px;
+}
+
+.textarea {
+  background: transparent;
+  color: white;
+  border: 2em white;
+  width: auto;
+  outline-color: white;
 }
