Reposition Delani logo to bottom center of background image

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,9 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+.bottom-center {
+  padding: 80px 0px 10px 0px;
+}
 
 /*Second Background*/
 
