--- a/css/style.css
+++ b/css/style.css
@@ -63,12 +63,10 @@ li {
 .box {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 10px 2em;
+  
+  padding-bottom: 5px
 }
 
-.box :first-child {
-    align-self: center;
-}
 
 h2 {
   text-align: center;
@@ -85,13 +83,13 @@ footer{
 
 }
 /* Show and Hide What we do*/
-#design {
+.design-hide {
   display: none;
 }
-#development {
+.development-hide {
   display: none;
 }
-#product {
+.product-hide {
   display: none;
 }
 
