Grid styling;padding, text alignment on css

--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,9 @@ li {
 .box {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  
-  padding-bottom: 5px
+  grid-gap: 50px 50px;
+  padding: 20px;
+  text-align: center;
 }
 
 
