--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  color: white;
 }
-.bottom-center {
-  padding: 80px 0px 10px 0px;
+.mouse {
+  padding:
 }
 
 /*Second Background*/
@@ -134,12 +135,23 @@ footer{
   color: white;
   font-size: 16px;
   padding: 16px 32px;
+  width: 100%;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  background-color: none;
+  resize: none;
 }
 
 .textarea {
   background: transparent;
   color: white;
   border: 2em white;
-  width: auto;
+  width: 80%;
   outline-color: white;
+}
+.contact-section {
+text-align: center;
+background-image: url("static/assets/backgrounds/c_image.jpg");
+
 }
