--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ footer{
 
 }
 /* Show and Hide What we do*/
-.design-hide {
+#description-one {
   display: none;
 }
 .development-hide {
@@ -143,15 +143,20 @@ footer{
   resize: none;
 }
 
-.textarea {
+textarea {
   background: transparent;
   color: white;
   border: 2em white;
   width: 80%;
   outline-color: white;
 }
+
 .contact-section {
 text-align: center;
-background-image: url("static/assets/backgrounds/c_image.jpg");
+color: white;
+background-image: url("/static/assets/backgrounds/c_image.jpg");
+}
 
+::placeholder {
+  color: white;
 }
